[package]
name = "winkey"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", default-features = false, features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = { version = "0.62.2", default-features = false }
