[package]
name = "winkey"
version = "0.1.0"
authors = ["robertpakalns"]
edition = "2024"
description = "Improve Windows UX by opening apps with global keybinds"
license-file = "LICENSE"
repository = "https://github.com/robertpakalns/WinKey"

[dependencies]
windows = { version = "0.62.2", default-features = false, features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }
windows-core = { version = "0.62.2", default-features = false }
